--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <section id="bio">
             <h2>About Me</h2>
             <ul>
-                <li>100 Black women Vice President 2021-2022 school year</li>
+                <li>100 Black Women Vice President 2021-2022 school year</li>
                 <li>Global village learning community 2020-2021 school year</li>
                 <li>Dean's list fall 2020 semester</li>
             </ul>
@@ -53,7 +53,7 @@
             <div>
                 <h3>Style Consultant</h3>
                 <p class="light">Target</p>
-                <p class="light">August 2021 to December 2021</p>
+                <p class="light">August 2021 to January 2021</p>
                 <p>I worked in specialty sales as a style consultant. I helped customers 
                 create outfits, find clothing, and with overall store experience.</p>
             </div>
