--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="src/styles/default.css" />
 </head>
 <body>
+    <div class="background"></div>
     <header>
         <h1>Samara Williams</h1>
 
@@ -17,7 +18,7 @@
         <section>
             <p>Charlotte, NC 28262</p>
             <a id="email" href="mailto:samara0205@me.com">samara0205@me.com</a>
-            <p>+1 (614) 962 1099</p>
+            <a href="tel:614-962-1099">(614) 962 1099</a>
         </section>
     </header>
 
