fixed header/bio img bugs

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <main>
         <section id="bio">
             <h2>About Me</h2>
+
+            <img src="src/images/samara.jpg" alt="Samara Williams Portrait" />
             <ul>
                 <li>100 Black Women Vice President 2021-2022 school year</li>
                 <li>Global village learning community 2020-2021 school year</li>
@@ -46,6 +48,22 @@
                 <p>Queen Creek High School - Queen Creek, AZ</p>
                 <p class="light">July 2016 to May 2020</p>
             </div>
+        </section>
+
+        <section id="skills">
+            <h2>Skills</h2>
+
+            <ul>
+                <li>Customer Service</li>
+                <li>Sales</li>
+                <li>Bussing</li>
+                <li>Organization Skills</li>
+                <li>Cashiering</li>
+                <li>Microsoft Excel</li>
+                <li>Restaurant Experience</li>
+                <li>POS</li>
+                <li>Typing</li>
+            </ul>
         </section>
 
         <section id="experience">
@@ -84,22 +102,6 @@
                 <p>I worked as a cashier at a baseball stadium, where I was able to 
                 have more of a personal connection with each customer I served.</p>
             </div>
-        </section>
-
-        <section id="skills">
-            <h2>Skills</h2>
-
-            <ul>
-                <li>Customer Service</li>
-                <li>Sales</li>
-                <li>Bussing</li>
-                <li>Organization Skills</li>
-                <li>Cashiering</li>
-                <li>Microsoft Excel</li>
-                <li>Restaurant Experience</li>
-                <li>POS</li>
-                <li>Typing</li>
-            </ul>
         </section>
 
         <section id="assessments">
